tests/reference/asr-incompatible_dimension_assignment_arr1-28b49c0.stderr
semantic error: Different shape for array assignment on dimension 1(1 and 3)
 --> tests/errors/incompatible_dimension_assignment_arr1.f90:7:5
  |
7 |     arr1 = (/1, 2, 3/)
  |     ^^^^^^^^^^^^^^^^^^ 
